# where_to_go

./: README.md  pyproject.toml  requirements.txt
places/: admin.py  models.py  urls.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_placeimage.py  0003_auto_20211105_0642.py  0004_alter_place_placeid.py  0005_alter_place_placeid.py  0006_auto_20211106_1154.py  0008_remove_place_placeid.py  0017_auto_20211108_1810.py
templates/: index.html
where_to_go/: settings.py  urls.py
