[tool.poetry]
name = "where_to_go"
version = "0.1.0"
description = ""
authors = ["stanislavglazko <stanislav.glazko@dualbootpartners.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
gunicorn = "^20.1.0"
Pillow = "^8.4.0"
django-admin-sortable2 = "^1.0.2"
django-tinymce = "^3.3.0"
environs = "^9.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
